# rbutler.github.io

./: CNAME  LICENSE  Makefile  README.md  about.html  about.md  about.rst  archive.html  contact.html  contact.markdown  index.html  rbio.cabal  rbutler.github.io.cabal  site.hs  stories.html  tils.html
css/: default.css
posts/: 2018-06-20-testing-faraday-retries.html  2018-06-20-testing-faraday-retries.markdown  2018-06-20-testing-faraday-retries.md  2019-04-30-detective-dinosaur-and-the-robot.html  2019-04-30-detective-dinosaur-and-the-robot.md
script/: deploy
static/js/: scripts.js
stories/: 2019-04-30-detective-dinosaur-and-the-robot.html  2019-04-30-detective-dinosaur-and-the-robot.md
templates/: archive.html  default.html  footer.html  head.html  nav.html  page.html  post.html  stories.html  story-list.html  story.html  til-list.html  til.html  tils.html
tils/: 2019-05-06-replace-comma-with-newline.html  2019-05-06-replace-comma-with-newline.md  2019-05-17-sync-beorg-on-a-mac.html  2019-05-17-sync-beorg-on-a-mac.md
