name:                rbio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rbutler/rbutler.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Butler
maintainer:          ryan@rbutler.io
copyright:           2018 Ryan Butler
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rbio
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
